# scpc-python

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yaml  test.yaml
docs/: .pages  index.md  reference.md
examples/: scpc_iv.py  scpc_ols.py
scripts/: coverage.sh
src/scpc/: __init__.py  core.py  types.py
src/scpc/utils/: data.py  matrix.py  results.py  spatial.py
tests/: config.py  test_demeanmat.py  test_get_avc.py  test_get_c0_from_avc.py  test_get_coef_names.py  test_get_conditional_projection_setup.py  test_get_cv.py  test_get_distmat.py  test_get_distvec.py  test_get_fixest_bread_inv.py  test_get_fixest_iv_design.py  test_get_fixest_score_matrix.py  test_get_nc.py  test_get_obs_index.py  test_get_oms.py  test_get_rp.py  test_get_scpc_model_matrix.py  test_get_tau.py  test_get_w.py  test_has_fixest_fe.py  test_is_fixest_iv_second_stage.py  test_jumble_s.py  test_ln_subset_evecs.py  test_lnget_oms.py  test_lnset_wc0.py  test_lvech.py  test_make_iv_residualizer.py  test_max_rp.py  test_next_u.py  test_normalize_s.py  test_orthogonalize_w.py  test_orthogonalize_w_cluster.py  test_orthogonalize_w_cluster_iv.py  test_orthogonalize_w_iv.py  test_r_reference_versions.py  test_raninds.py  test_resolve_coords_input.py  test_resolve_parm_indices.py  test_scpc.py  test_scpc_pyfixest_iv.py  (+6 more)
