[project]
name = "scpc-python"
version = "0.1.2"
description = "SCPC inference in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyfixest>=0.50.1,<0.51",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "ty>=0.0.18",
]

[project.scripts]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"                 

[tool.setuptools.packages.find]
where = ["src"]
